# Server

./: .clang-format  .drone.yml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  ALL_BUILD.vcxproj  BUILD.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.vcxproj  LICENSE.md  Makefile  README.md  SECURITY.md  ZERO_CHECK.vcxproj  appveyor-bots.yml  appveyor-no-bots.yml  changelog.txt  index.html  package.json  params.json  pull_request_template.md  sonar-project.properties
EMuShareMem/: CMakeLists.txt  DLLMain.cpp  Doors.cpp  Doors.h  Items.cpp  Items.h  Loot.cpp  Loot.h  MMF.cpp  MMF.h  MMFMutex.cpp  MMFMutex.h  NPCFactionLists.cpp  NPCFactionLists.h  NPCTypes.cpp  NPCTypes.h  Opcodes.cpp  Opcodes.h  SkillCaps.cpp  SkillCaps.h  Spells.cpp  Spells.h
client_files/export/: CMakeLists.txt  main.cpp
client_files/import/: CMakeLists.txt  main.cpp
common/: BasePacket.cpp  BasePacket.h  CMakeLists.txt  CRC16.cpp  CRC16.h  Condition.cpp  Condition.h  DBMemLeak.cpp  DBMemLeak.h  EMuShareMem.cpp  EMuShareMem.h  EQDB.cpp  EQDB.h  EQDBRes.cpp  EQDBRes.h  EQEMuError.cpp  EQEMuError.h  EQEmuConfig.cpp  EQEmuConfig.h  EQNetwork.cpp  EQNetwork.h  EQPacket.cpp  EQPacket.h  EQStream.cpp  EQStream.h  EQStreamFactory.cpp  EQStreamFactory.h  EQStreamIdent.cpp  EQStreamIdent.h  EQStreamIntf.h  EQStreamLocator.h  EQStreamProxy.cpp  EQStreamProxy.h  EmuTCPConnection.cpp  EmuTCPConnection.h  EmuTCPServer.cpp  EmuTCPServer.h  Item.cpp  Item.h  MaxSkill.cpp  (+345 more)
common/SocketLib/: Base64.cpp  Base64.h  File.cpp  File.h  HTTPSocket.cpp  HTTPSocket.h  HttpdCookies.cpp  HttpdCookies.h  HttpdForm.cpp  HttpdForm.h  HttpdSocket.cpp  HttpdSocket.h  IFile.h  MemFile.cpp  MemFile.h  Mime.cpp  Mime.h  Parse.cpp  Parse.h  README.eqemu  README.macosx  Utility.cpp  Utility.h  socket_include.cpp  socket_include.h
common/StackWalker/: StackWalker.cpp  StackWalker.h
common/cli/: argh.h  eqemu_command_handler.cpp  eqemu_command_handler.h  terminal_color.hpp
common/content/: world_content_service.cpp  world_content_service.h  world_content_service_rulesets.cpp
common/net/: dns.h  (+41 more)
eqlaunch/: CMakeLists.txt  ZoneLaunch.cpp  ZoneLaunch.h  eqlaunch.cpp  worldserver.cpp  worldserver.h  zone_launch.cpp  zone_launch.h
eqperf/: CMakeLists.txt  eqp_profile_event.cpp  eqp_profile_event.h  eqp_profile_function.h  eqp_profile_timer.cpp  eqp_profile_timer.h  eqp_profiler.cpp  eqp_profiler.h  eqp_profiler_node.cpp  eqp_profiler_node.h
hc/: CMakeLists.txt  eq.cpp  eq.h  login.cpp  login.h  main.cpp  world.cpp  world.h
loginserver/: CMakeLists.txt  Client.cpp  Client.h  ClientManager.cpp  ClientManager.h  Config.cpp  Config.h  Database.h  DatabaseMySQL.cpp  DatabaseMySQL.h  DatabasePostgreSQL.cpp  DatabasePostgreSQL.h  EQCryptoAPI.h  Encryption.cpp  Encryption.h  ErrorLog.cpp  ErrorLog.h  LoginServer.h  LoginStructures.h  Main.cpp  Options.h  ServerManager.cpp  ServerManager.h  WorldServer.cpp  WorldServer.h  account_management.cpp  account_management.h  client.cpp  client.h  client_manager.cpp  client_manager.h  config.cpp  config.h  database.cpp  database.h  database_mysql.cpp  database_mysql.h  database_postgresql.cpp  database_postgresql.h  encryption.cpp  (+19 more)
lp/: CMakeLists.txt  main.cpp
luabind/: CMakeLists.txt
queryserv/: CMakeLists.txt  database.cpp  database.h  discord_manager.cpp  discord_manager.h  lfguild.cpp  lfguild.h  queryserv.cpp  queryservconfig.cpp  queryservconfig.h  worldserver.cpp  worldserver.h  zonelist.cpp  zonelist.h  zoneserver.cpp  zoneserver.h
recast/: CMakeLists.txt
shared_memory/: CMakeLists.txt  README.md  base_data.cpp  base_data.h  faction_association.cpp  faction_association.h  items.cpp  items.h  loot.cpp  loot.h  main.cpp  npc_faction.cpp  npc_faction.h  skill_caps.cpp  skill_caps.h  spells.cpp  spells.h  splash_faction.cpp  splash_faction.h
socket_server/: CMakeLists.txt  database.cpp  database.h  socket_server.cpp  socket_server_config.cpp  socket_server_config.h  worldserver.cpp  worldserver.h
test/: .runsettings  CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  atobool_test.h  data_verification_test.h  fixed_memory_test.h  fixed_memory_variable_test.h  hextoi_32_64_test.h  inventory_test.h  ipc_mutex_test.h  main.cpp  memory_buffer_test.h  memory_mapped_file_test.h  skills_util_test.h  string_util_test.h  task_state_test.h
ucs/: CMakeLists.txt  chatchannel.cpp  chatchannel.h  clientlist.cpp  clientlist.h  database.cpp  database.h  ucs.cpp  ucsconfig.cpp  ucsconfig.h  worldserver.cpp  worldserver.h
utils/: CMakeLists.txt  cleanipc.cpp
web_interface/: CMakeLists.txt  call_handler.cpp  call_handler.h  method_handler.cpp  method_handler.h  remote_call.cpp  remote_call.h  web_connection.cpp  web_connection.h  web_interface.cpp  web_interface.h  worldserver.cpp  worldserver.h
world/: Adventure.cpp  Adventure.h  AdventureManager.cpp  AdventureManager.h  CMakeLists.txt  EQLConfig.cpp  EQLConfig.h  EQW.cpp  EQW.h  EQWHTTPHandler.cpp  EQWHTTPHandler.h  EQWParser.cpp  EQWParser.h  HTTPRequest.cpp  HTTPRequest.h  LauncherLink.cpp  LauncherLink.h  LauncherList.cpp  LauncherList.h  LoginServer.cpp  LoginServer.h  LoginServerList.cpp  LoginServerList.h  SoFCharCreateData.h  WorldConfig.cpp  WorldConfig.h  WorldTCPConnection.h  adventure.cpp  adventure.h  adventure_manager.cpp  adventure_manager.h  adventure_template.h  client.cpp  client.h  cliententry.cpp  cliententry.h  clientlist.cpp  clientlist.h  console.cpp  console.h  (+93 more)
zone/: AA.cpp  AA.h  AA_base.cpp  AA_v1.cpp  CMakeLists.txt  Map.cpp  MobAI.cpp  NpcAI.h  Object.cpp  PlayerCorpse.cpp  PlayerCorpse.h  QGlobals.cpp  QGlobals.h  Quest.cpp  Quest.h  QuestInterface.h  QuestParserCollection.cpp  QuestParserCollection.h  RaycastMesh.cpp  RaycastMesh.h  StringIDs.h  ZoneConfig.cpp  ZoneConfig.h  aa.cpp  aa.h  aa_ability.cpp  aa_ability.h  aa_rank.h  aa_rank_effects.h  aa_rank_prereqs.h  aggro.cpp  aggromanager.cpp  aggromanager.h  anti_cheat.cpp  anti_cheat.h  api_service.cpp  api_service.h  attack.cpp  attack.cpp.orig  attackx.cpp  (+392 more)
(+3246 files in other folders)
